# dmlite_plugin_rucio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  RELEASE-NOTES  plugin_rucio.cc  plugin_rucio.h  rucio_catalog.cc  rucio_connect.cc  rucio_connect.h
cmake/modules/: FindDMLite.cmake
etc/: CMakeLists.txt  ca.crt.in  rucio.conf.in
src/: CMakeLists.txt  plugin_rucio.cc  plugin_rucio.h  rucio_catalog.cc  rucio_catalog.h  rucio_connect.cc  rucio_connect.h
tests/: CMakeLists.txt  test.cc
tools/: bashdavfs  insert_rucio_dummy_data.sh  token_mysql.sh
